css/user-sidebar.css
.navbar-no-border{
	border:none;
}

#user-results{
	float:left;
}

#content{
    width: 100%;
    height: 100%;
	position:relative;
	top:50px;
}

#user-panel {
	background: #222;
	color: grey;
    height: 100%;
    width: 400px;
	position:absolute;
	left:0px;
	z-index:3;
    -webkit-transition: left .4s ease;
    -moz-transition: left .4s ease;
    -o-transition: left .4s ease;
    transition: left .4s ease;
}
#user-panel.collapsed {
	left: -400px;
}

#user-toggle-button{
	position:absolute;
	left:100%;
	top:8px;
    width: 23px;
    height: 48px;
	background: #222;
    border: none;
}

#user-toggle-button:focus{
	outline:none;
}

/*override .leaflet-left so it doesn't overlap sidebar button*/
.leaflet-left{
	left:423px!important;
	-webkit-transition: left .4s ease;
    -moz-transition: left .4s ease;
    -o-transition: left .4s ease;
    transition: left .4s ease;
}

.leaflet-left.collapsed{
	left:23px!important;
}

#user-panel-inner{
	 width:100%;
	 height:100%;
	 overflow:hidden;
	 padding:0px;
 }

 #user-results{
	 height:100%;
	 width:100%;
	 overflow-y:auto;
 }
 
 #user-panel-inner .navbar-form{
	 padding: 10px 18px 10px 24px;
 }
 
 .user-box {
    cursor: pointer;
    box-sizing: border-box;
    min-height: 112px;
    padding: 10px 18px 10px 24px;
	white-space: nowrap;
}

.user-picture {
    display: inline-block;
    width: 80px;
    height: 92px;
    margin-right: 10px;
    position: relative;
}

.user-info {
    color: #8c8c8c;
    display: inline-block;
    font-size: 13px;
    line-height: 16px;
    min-width: 1px;
}

.user-info-title {
	padding-top:2px;
    font-size: 15px;
    line-height: 16px;
    padding-bottom: 2px;
    padding-right: 10px;
    display: table-cell;
    width: 100%;
}

